# SilkRoad

./: .gitignore  Dockerfile  Dockerfile.silkroad  LICENSE  Makefile  Package.resolved  Package.swift  README.md  index.html
AndroidLibs/: termux_build_notes.txt
AndroidLibs/arm64-v8a/: giflib_5.2.1-2_aarch64.deb  leptonica_1.84.1_aarch64.deb  leptonica_1.85.0_aarch64.deb  libandroid-posix-semaphore_0.1-3_aarch64.deb  libandroid-spawn_0.3_aarch64.deb  libarchive_3.7.2_aarch64.deb  libarchive_3.8.1_aarch64.deb  libbz2_1.0.8-6_aarch64.deb  libcurl_8.14.1_aarch64.deb  libcurl_8.6.0-1_aarch64.deb  libiconv_1.17_aarch64.deb  libiconv_1.18_aarch64.deb  libjpeg-turbo_3.0.2_aarch64.deb  libjpeg-turbo_3.1.1_aarch64.deb  liblzma_5.6.0_aarch64.deb  liblzma_5.8.1_aarch64.deb  libnghttp2_1.59.0_aarch64.deb  libnghttp2_1.66.0_aarch64.deb  libnghttp3_1.1.0_aarch64.deb  libnghttp3_1.10.1_aarch64.deb  libpng_1.6.43_aarch64.deb  libpng_1.6.50_aarch64.deb  libresolv-wrapper_1.1.7-4_aarch64.deb  libssh2_1.11.0_aarch64.deb  libssh2_1.11.1_aarch64.deb  libtiff_4.6.0_aarch64.deb  libtiff_4.7.0_aarch64.deb  libwebp_1.3.2_aarch64.deb  libwebp_1.6.0-rc1-0_aarch64.deb  libxml2_2.12.5_aarch64.deb  zlib_1.3.1_aarch64.deb  (+7 more)
AndroidSDK/: android-aarch64.json  android-armv7.json  android-x86_64.json
Scripts/: patch-dependency  patch-elf  remove-so  silkroad-fix-so  strip-so  swift-build-all  swift-build-all-debug  termux-install  vendored-so-install
SilkRoadAndroidTest/: build.gradle  settings.gradle
SilkRoadAndroidTest/app/src/main/cpp/: CMakeLists.txt  callbacksJNI.cpp  silkroadAndroidJNI.cpp
(+91 files in other folders)
